# crustynab

./: .gitignore  AGENTS.md  Cargo.toml  Makefile  README.md  config.cue  configSchema.cue  flake.nix
src/: calendar_weeks.rs  config.rs  lib.rs  main.rs  report.rs  visual_report.rs  ynab.rs
tests/: test_calendar_weeks.rs  test_calendar_weeks_proptest.rs  test_cli_golden.rs  test_report.rs  test_report_proptest.rs  test_visual_report.rs  test_visual_report_proptest.rs
tests/snapshots/: test_calendar_weeks__month_week_for_date_2024_03_13.snap  test_calendar_weeks__month_week_for_date_contains_date.snap  test_calendar_weeks__month_weeks_march_2024.snap  test_calendar_weeks__partition_2024_covers_all_days.snap  test_calendar_weeks__partition_2024_first_week_starts_jan_1.snap  test_calendar_weeks__partition_2024_no_duplicate_dates.snap  test_calendar_weeks__partition_2024_week_boundaries.snap  test_calendar_weeks__week_number_matches_partition_order.snap  test_cli_golden__golden_csv_print.snap  test_cli_golden__golden_csv_report.snap  test_cli_golden__golden_csv_totals.snap  test_cli_golden__golden_polars_print.snap  test_cli_golden__golden_visual_output.snap  test_report__build_report_table_sums_spent.snap  test_report__categories_to_polars_converts_milliunits.snap  test_report__category_group_totals_include_balance_without_spending.snap  test_report__category_group_totals_match_rows.snap  test_report__get_budget_id_finds_match.snap  test_report__get_budget_id_missing_returns_none.snap  test_report__get_categories_to_watch_filters_correctly.snap  test_report__get_missing_category_groups_detects_missing.snap  test_report__relevant_transactions_filters_date_range.snap  test_report__split_transactions_are_counted_per_category.snap  test_report__transactions_to_polars_expands_splits.snap  (+13 more)
